# ser2key

./: .gitignore  README.md  config.ini  pyproject.toml  requirements.txt  ser2key.py  ser2key_core.py  ser2key_i18n.py
.github/workflows/: ci.yml  release.yml
tests/: test_ser2key_core.py  test_ser2key_windows.py
